--- a/src/components/Project/Projects.css
+++ b/src/components/Project/Projects.css
@@ -217,3 +217,34 @@
   align-items: center;
   z-index: 9999;
 }
+
+/* .gallery-modal .gallery-modal-left img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+} */
+
+.gallery-modal .gallery-modal-left img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 70vh;
+  object-fit: contain;
+  display: block;
+  margin: 0 auto; /* Center the image */
+}
+
+
+.gallery-modal .gallery-modal-inner {
+  overflow-y: auto;
+  max-height: 70vh;
+}
+
+.gallery-modal .projects_skills ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+
